<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context=".MainActivity" >

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center"
        android:layout_marginTop="10sp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="1sp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/valuta"
            android:layout_weight="1"/>

        <TextView
            android:layout_marginRight="250sp"
            android:id="@+id/valutee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65sp"
        android:layout_marginBottom="60sp"
        android:background="@drawable/icon_game"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/logogame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260sp"
        android:background="@color/purple_200"
        android:fontFamily="@font/khula_extrabold"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="60sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="400sp">

        <Button
            style="@style/buttons"
            android:id="@+id/butpaint"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/khula_extrabold"
            android:text="@string/paint"


            />

        <Button
            android:id="@+id/butrus"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/khula_extrabold"
            android:text="@string/rus"
            style="@style/buttons"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/butmath"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/khula_extrabold"
            android:text="@string/math"
            style="@style/buttons"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/buteng"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/khula_extrabold"
            android:text="@string/eng"
            android:textStyle="bold"
            style="@style/buttons"/>

    </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>